--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -1,16 +1,16 @@
-name: Gatsby Publish
+# name: Gatsby Publish
 
-on:
-  push:
-    branches:
-      - dev
+# on:
+#   push:
+#     branches:
+#       - dev
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: enriikke/gatsby-gh-pages-action@v2
-        with:
-          access-token: ${{ secrets.key }}
-          deploy-branch:  dev
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v1
+#       - uses: enriikke/gatsby-gh-pages-action@v2
+#         with:
+#           access-token: ${{ secrets.key }}
+#           deploy-branch:  dev
